# Stack-Overflow-Clustering

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: app.py
notebooks/: 01_phase1_eda_executed.ipynb  02_phase2_clustering_executed.ipynb  03_phase3_consensus_executed.ipynb
scripts/: __init__.py  build_all_deliverables.py  build_final_report.py  build_phase1_notebook.py  build_phase1_report.py  build_phase2_notebook.py  build_phase2_report.py  build_phase3_outputs.py  build_phase3_report.py  build_topic_report.py  export_reports_pdf.ps1  run_all.py  run_phase1.py  run_phase2.py  run_phase3.py  validate_release.py
src/stackoverflow_clustering/: __init__.py  bonus.py  config.py  data.py  evaluation.py  family_visualization.py  features.py  io_utils.py  model_families.py  partitioning.py  phase2_visualization.py  phase3.py  reduction.py  reporting.py  tendency.py  visualization.py
tests/: test_bonus.py  test_phase1_core.py  test_phase2_partitioning.py  test_phase3_core.py
