[project]
name = "stackoverflow-clustering"
version = "0.1.0"
description = "Clustering analysis of Stack Overflow Developer Survey 2024"
requires-python = ">=3.13"
authors = [
  {name = "Mersad Ahmadi"},
  {name = "Ali Hasanzadeh"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
